deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hydrahouse
  labels:
    app: hydrahouse
